--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="./recipes/pizza.html">Pizza</a></li>
       <li><a href="./recipes/ice-cream.html">Ice Cream</a></li>
-      <li></li>
+      <li><a href="./recipes/cookies.html">Cookies</a></li>
     </ul>
   </body>
 </html>
