--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="./recipes/pizza.html">Pizza</a></li>
-      <li><a href="./recipes/ice-cream.html">Ice Cream</a></li>
-      <li><a href="./recipes/cookies.html">Cookies</a></li>
-    </ul>
+    <div class="main-div">
+      <h1>Odin Recipes</h1>
+      <ul>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
+        <li><a href="./recipes/ice-cream.html">Ice Cream</a></li>
+        <li><a href="./recipes/cookies.html">Cookies</a></li>
+      </ul>
+    </div>
   </body>
 </html>
